--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,13 @@
-Source: auto-add-iso-sources
-Section: unknown
+Source: add-iso-sources
+Section: embedded
 Priority: extra
 Maintainer: Ryan Kuester <rkuester@insymbols.com>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.3
 
-Package: auto-add-iso-sources
+Package: add-iso-sources
 Architecture: all
-Depends: ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends: mount-usb-media, ${misc:Depends}
+Description: Add ISO format files as APT sources
+ Scan newly arriving USB media for ISO format files containing APT
+ archives and add them as APT sources.
