Add Vcs-* version control system information

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,8 @@ Priority: extra
 Maintainer: Ryan Kuester <rkuester@insymbols.com>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.3
+Vcs-Git: https://github.com/pragmatux/add-iso-sources.git
+Vcs-Browser: https://github.com/pragmatux/add-iso-sources
 
 Package: add-iso-sources
 Architecture: all
